# webapptg

./: .gitignore  README.md  docker-compose.yml  nginx.conf
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  gunicorn_config.py  pyproject.toml  run.sh  start_app.py
backend/_backend/: _main.py  config.py  logging_config.py  models.py
backend/_backend/api/: users.py
backend/_backend/utils/: birthday_calculator.py
bot/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
bot/tg_bot/: _bot.py  config.py  logging_config.py
bot/tg_bot/handlers/: commands.py  inline_queries.py
vueone/: .dockerignore  .env.production  Dockerfile  README.md  env.d.ts  global.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
vueone/src/: main.ts
vueone/src/components/: BirthDateForm.vue  UserProfile.vue
vueone/src/router/: index.ts
