[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = ""
authors = ["mikheyev9 <mikheyev9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.12.0"
pydantic-settings = "^2.4.0"

[tool.poetry.scripts]
start-bot = "tg_bot._bot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


